# --research

./: .editorconfig  CMakeLists.txt  README.md
cmake/: BuildConfig.cmake  CheckCPUFlags.cmake  CheckJansson.cmake  CheckJemalloc.cmake
src/serial/: CMakeLists.txt  serial.cc  sparse.hpp  spase.cc
test/: CMakeLists.txt
